<resources>
    <string name="app_name">MyApp</string>
    <string name="t1">Happy Birthday,</string>
    <string name="t2" translatable="false">wxy</string>
    <string name="t3" translatable="false">from: w</string>
    <string name="str1" translatable="false">hello</string>
    <string name="str2" translatable="false">华氏度是：</string>
    <string name="hint1" translatable="false">input your name</string>
    <string name="hint2" translatable="false">请输入温度</string>
    <string name="hint3" translatable="false">input RMB</string>
    <string name="btn1" translatable="false">OK</string>
    <string name="point1" translatable="false">+ 1 point</string>
    <string name="point2" translatable="false">+ 2 points</string>
    <string name="point3" translatable="false">+ 3 points</string>
    <string name="btn_reset" translatable="false">reset</string>
    <string name="btndollar" translatable="false">DOLLAR</string>
    <string name="btneuro" translatable="false">EURO</string>
    <string name="btnwon" translatable="false">WON</string>
    <string name="btnconfig" translatable="false">CONFIG</string>
    <string name="lable_open_list" translatable="false">OpenList</string>
    <string name="rdo_home_label" translatable="false">首页</string>
    <string name="rdo_func_label" translatable="false">功能</string>
    <string name="rdo_setting_label" translatable="false">设置</string>
</resources>
